# -Multi-Platform-Video-Insight-Skill

./: .gitignore  multi_platform_video_insight_skill.md
.kiro/steering/: anti-crawler-safety.md  chinese-interaction.md  data-models.md  llm-integration.md  openclaw-concepts.md  project-conventions.md  testing-strategy.md
openclaw/: Dockerfile  README.md  config.yaml
openclaw/openclaw/: __init__.py  main.py
openclaw/tests/: conftest.py
video-insight/: .env.example  .gitignore  Dockerfile  config.yaml  pyproject.toml
video-insight/openclaw/: main.py
video-insight/openclaw/adapters/: base.py  douyin.py  xiaohongshu.py
video-insight/openclaw/aggregation/: aggregator.py  memory.py
video-insight/openclaw/config/: __init__.py  presets.py  settings.py
video-insight/openclaw/llm/: __init__.py  client.py  gateway.py  prompts.py
video-insight/openclaw/middleware/: access_manager.py
video-insight/openclaw/models/: types.py
video-insight/openclaw/monitoring/: __init__.py  logger.py
video-insight/openclaw/pipeline/: classifier.py  manager.py  segmenter.py  transcriber.py
video-insight/openclaw/report/: generator.py
video-insight/openclaw/storage/: datastore.py  sqlite_backend.py
video-insight/tests/integration/: test_e2e.py
video-insight/tests/property/: test_aggregator_property.py  test_analyzer_property.py  test_cleaner_property.py  test_models_property.py  test_platform_router_property.py
video-insight/tests/unit/: test_access_manager.py  test_aggregator.py  test_datastore.py  test_models.py  test_report_generator.py
(+48 files in other folders)
